--- a/app/assets/css/base/_variables.scss
+++ b/app/assets/css/base/_variables.scss
@@ -12,7 +12,7 @@ $color-secondary-brighter: lighten($color-secondary, 20%);
 $color-background-dark: #333333;
 $color-background-darker: #000000;
 $color-background-bright: #2f4256;
-$color-background-brighter: #35495f;
+$color-background-brighter: #f8f8f8;
 $color-foreground-dark: #333333;
 $color-foreground-darker: #000000;
 $color-foreground-bright: #969da6;
