--- a/app/assets/css/base/_globals.scss
+++ b/app/assets/css/base/_globals.scss
@@ -21,6 +21,9 @@ body {
   @media screen and (max-width: $media-screen-s) {
     font-size: $font-size * 0.65;
   }
+  h1 {
+    font-size: 35px;
+  }
   h2 {
     color: #666;
     size: 24px;
@@ -31,6 +34,7 @@ body {
     width: 100%;
     color: #a9a9a9;
     font-weight: 300;
+    margin-bottom: 35px;
     th {
       background-color: #f1f1f1;
       padding: 10px;
@@ -45,16 +49,44 @@ body {
       border-right-color: #f1f1f1;
       border-right-style: solid;
       padding: 10px;
+    }
+    tr {
+      &:nth-child(odd) {
+        background-color: #f8f8f8;
+      }
       &:last-child {
         border-bottom-width: 1px;
         border-bottom-color: #f1f1f1;
         border-bottom-style: solid;
       }
     }
-    tr {
-      &:nth-child(odd) {
-        background-color: #f8f8f8;
-      }
-    }
+  }
+  ul,
+  ol {
+    list-style: none;
+    padding: 0;
+  }
+  ul {
+    list-style-image: url('~assets/images/list-icon.png');
+    margin-left: 35px;
+  }
+  ol > li {
+    vertical-align: middle;
+  }
+  ol > li:first-child {
+    counter-reset: index;
+  }
+  ol > li:before {
+    content: counter(index) ') ';
+    counter-increment: index;
+    width: 30px;
+    height: 19px;
+    display: inline-block;
+    vertical-align: middle;
+    margin-right: 5px;
+    text-align: center;
+    color: #00ceff;
+    font-size: 16px;
+    line-height: 13px;
   }
 }
