--- a/app/assets/css/components/index/goods.scss
+++ b/app/assets/css/components/index/goods.scss
@@ -17,3 +17,13 @@
     font-weight: 400;
   }
 }
+.led-str,
+.a-tbl,
+.info-stand,
+.led-components,
+.print,
+.video-monitor {
+  width: 70%;
+  height: 60%;
+  margin: 0 auto;
+}
