--- a/app/assets/css/components/index/title.scss
+++ b/app/assets/css/components/index/title.scss
@@ -1,6 +1,6 @@
 .title {
   height: 300px;
-  //   background: url('~assets/images/main-bg.jpg') center center cover;
+  color: #fff;
   h1 {
     font-size: 35px;
     margin-bottom: 20px;
