--- a/app/assets/css/base/_variables.scss
+++ b/app/assets/css/base/_variables.scss
@@ -51,3 +51,14 @@ $media-screen-xxxl: 120em; // 1920px
 // Variables for mixins
 $medias: xxs, xs, s, m, l, xl, xxl, xxxl;
 $mediavalues: $media-screen-xxs, $media-screen-xs, $media-screen-s, $media-screen-m, $media-screen-l, $media-screen-xl, $media-screen-xxl, $media-screen-xxxl;
+
+$color-white: #ffffff;
+$color-black: #333;
+
+$color-grey-light: #f5f5f5;
+$color-grey: #dddddd;
+$color-grey-dark: #a9a9a9;
+
+$color-blue-light: #0592b6;
+$color-blue: #00bfed;
+$color-blue-dark: #47daff;
