--- a/app/assets/css/main.sass
+++ b/app/assets/css/main.sass
@@ -1,5 +1,5 @@
 // Base Helpers
-@import "base/icons", "base/states", "base/utilities"
+@import "base/icons", "base/states", "base/utilities", "base/reset"
 // @import "base/fonts"
 
 // Vendor
