--- a/app/assets/css/base/_variables.scss
+++ b/app/assets/css/base/_variables.scss
@@ -4,7 +4,7 @@ $color-brand-dark: darken($color-brand, 10%);
 $color-brand-darker: darken($color-brand, 20%);
 $color-brand-bright: lighten($color-brand, 10%);
 $color-brand-brighter: lighten($color-brand, 20%);
-$color-secondary: #5969dc;
+$color-secondary: #a1cd03;
 $color-secondary-dark: darken($color-secondary, 10%);
 $color-secondary-darker: darken($color-secondary, 20%);
 $color-secondary-bright: lighten($color-secondary, 10%);
