--- a/app/assets/css/main.sass
+++ b/app/assets/css/main.sass
@@ -5,6 +5,7 @@
 // Vendor
 @import "vendor/normalize"
 @import "vendor/bootstrap.min"
+@import "vendor/swiper.min"
 
 // Base Files
 @import "base/globals"
