--- a/app/assets/css/base/_globals.scss
+++ b/app/assets/css/base/_globals.scss
@@ -21,16 +21,13 @@ body {
   @media screen and (max-width: $media-screen-s) {
     font-size: $font-size * 0.65;
   }
-  h1 {
-    font-size: 35px;
-  }
+
   h2 {
     color: #666;
-    size: 24px;
     font-weight: 700;
     margin-bottom: 35px;
   }
-  table {
+  .content table {
     width: 100%;
     color: #a9a9a9;
     font-weight: 300;
@@ -66,7 +63,7 @@ body {
     list-style: none;
     padding: 0;
   }
-  ul {
+  .content ul {
     list-style-image: url('~assets/images/list-icon.png');
     margin-left: 35px;
   }
