--- a/app/assets/css/components/index/share.scss
+++ b/app/assets/css/components/index/share.scss
@@ -7,14 +7,21 @@
     padding: 40px;
   }
   h2 {
-    font-size: 24px;
     font-weight: 700;
     margin-bottom: 30px;
     margin-top: 0;
     color: #fff;
   }
   p {
-    font-size: 14px;
     font-weight: 300;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .share-container {
+    padding: 20px;
+  }
+  .share h2 {
+    margin-bottom: 10px;
   }
 }
