--- a/app/assets/css/components/productCard.scss
+++ b/app/assets/css/components/productCard.scss
@@ -96,6 +96,16 @@
   }
   &__link {
     text-align: center;
+    a {
+      color: $color-brand;
+      cursor: pointer;
+      border-bottom: 1px transparent;
+      &:hover,
+      :focus {
+        text-decoration: none;
+        border-bottom: 1px solid $color-brand;
+      }
+    }
   }
   &__buttons {
     text-align: center;
