--- a/app/assets/css/components/productList.scss
+++ b/app/assets/css/components/productList.scss
@@ -42,3 +42,38 @@
     }
   }
 }
+.pagination {
+  text-align: center;
+  .btn__more {
+    width: 169px;
+    height: 30px;
+    background-color: $color-background;
+    border-radius: 30px;
+    text-align: center;
+    border: none;
+  }
+  &__list {
+    float: right;
+    a {
+      color: $color-brand-text;
+      &:hover,
+      :focus {
+        text-decoration: none;
+        color: $color-brand;
+      }
+      &.active {
+        color: $color-brand;
+      }
+    }
+    ul {
+      position: relative;
+
+      li {
+        display: inline-block;
+        padding: 2px 8px;
+        background-color: $color-background;
+        border-radius: 30px;
+      }
+    }
+  }
+}
