--- a/app/assets/css/components/Header.scss
+++ b/app/assets/css/components/Header.scss
@@ -180,7 +180,7 @@ a {
       }
       .menu-child {
         position: absolute;
-        background-color: $color-brand;
+        background-color: $color-primary;
         padding: 0 15px 10px 15px;
         border-bottom-left-radius: 5px;
         border-bottom-right-radius: 5px;
