--- a/app/assets/css/base/_globals.scss
+++ b/app/assets/css/base/_globals.scss
@@ -4,23 +4,23 @@ html,
 body {
   $font-size: 14px;
 
-  font-family: Lato;
+  font-family: 'Open Sans', sans-serif;
   font-size: $font-size;
   height: 100%;
   width: 100%;
-  color: $color-brand-text;
+  color: $color-text;
 
   p {
     margin: 0;
   }
 
-  @media screen and (max-width: $media-screen-m) {
-    font-size: $font-size * 0.8;
-  }
+  // @media screen and (max-width: $media-screen-m) {
+  //   font-size: $font-size * 0.8;
+  // }
 
-  @media screen and (max-width: $media-screen-s) {
-    font-size: $font-size * 0.65;
-  }
+  // @media screen and (max-width: $media-screen-s) {
+  //   font-size: $font-size * 0.65;
+  // }
 
   h2 {
     color: #666;
