--- a/app/assets/css/components/productCard.scss
+++ b/app/assets/css/components/productCard.scss
@@ -1,149 +1,137 @@
 .card {
-  display: inline-block;
-  min-width: 245px;
-  max-width: 290px;
-  margin-bottom: 30px;
-  vertical-align: top;
-  padding-right: 15px;
-  &__header {
-    background-color: #f1f1f1;
-    font-size: 10px;
-    font-weight: 300;
-    padding: 5px 7px;
-    border-top-left-radius: 5px;
-    border-top-right-radius: 5px;
-  }
-  .card__article,
-  .card__favourites,
-  .card__compare {
-    display: inline-block;
-    img {
-      margin: 0 5px;
+  transition: box-shadow 0.2s ease-in;
+  display: block;
+  position: relative;
+  background-color: $color-grey-light;
+  box-shadow: rgba(0, 0, 0, 0.2) 1px 1px 3px;
+
+  &:hover {
+    box-shadow: rgba(0, 0, 0, 0.2) 2px 2px 5px;
+    .card__button {
+      background-color: $color-important-dark;
     }
   }
-  .card__favourites,
-  .card__compare {
-    float: right;
-  }
-  &__slider {
-    height: 160px;
-    width: 100%;
-    position: relative;
-    color: #fff;
-    font-size: 12px;
+
+  &__header {
+    font-size: $font-size-s;
     font-weight: 300;
-    &_leader {
+    padding: $space-md;
+  }
+
+  &__slider {
+    box-shadow: inset rgba(0, 0, 0, 0.2) 0 0 2px;
+    background-color: darken($color-grey-light, 3%);
+
+    height: 160px;
+    &-item {
+      height: 100%;
+      background-size: contain;
+      background-position: center;
+      background-repeat: no-repeat;
+    }
+  }
+
+  .card__tag {
+    position: absolute;
+    right: -3px;
+    top: 35px;
+    box-shadow: rgba(0, 0, 0, 0.4) -2px 1px 3px;
+    border-top-left-radius: $space-sm;
+    border-bottom-left-radius: $space-sm;
+    padding: $space-sm;
+    color: $color-white;
+    font-size: $font-size-xs;
+    &.-good {
       background-color: $color-secondary;
     }
-    &_sale {
-      background-color: $color-third;
-    }
-    &_share {
-      background-color: $color-third;
+    &.-excelent {
+      background-color: $color-important;
     }
   }
-  .card__slider_leader,
-  .card__slider_sale,
-  .card__slider_share {
-    position: absolute;
-    right: -5px;
-    top: 20px;
-    border-top-left-radius: 5px;
-    border-bottom-left-radius: 5px;
-    padding: 1px 5px;
-  }
-  &__body {
-    padding: 8px 0;
-    background-color: $color-background;
-  }
+
   &__name {
-    margin-bottom: 10px;
-    padding: 0 5px;
+    display: block;
+    margin: $space-lg $space-md;
+    text-align: center;
+    font-weight: bold;
   }
+
   &__config {
-    padding: 0 5px;
-    font-size: 0.9rem;
+    padding: 0 $space-lg;
+    margin: $space-lg 0;
+
     &-item {
-      margin-bottom: 15px;
+      margin-bottom: $space-md;
+      &:last-child {
+        margin-bottom: 0;
+      }
     }
-    .card__config-name,
-    .card__config-value {
+
+    &-name,
+    &-value {
+      font-size: 0;
       display: inline-block;
+      vertical-align: middle;
     }
-    .card__config-value {
+    &-value {
+      // display: block;
+      text-overflow: ellipsis;
+      overflow: hidden;
+      white-space: nowrap;
+      font-size: $font-size-s;
+      text-align: center;
       background-color: #ffffff;
-      width: 149px;
+      width: 65%;
       height: 25px;
-      border: 1px solid $color-brand-text;
-      float: right;
-      border-radius: 25px;
-      text-align: center;
-      padding: 0 5px;
+      line-height: 23px;
+      border: 1px solid $color-grey-dark;
+      border-radius: 100px;
+      padding: 0 $space-lg;
+    }
+    &-name {
+      width: 35%;
+      font-size: $font-size-m;
     }
   }
-  &__cost {
-    background-color: $color-background-second;
+
+  &__block {
     text-align: center;
-    padding: 13px 0;
-    span {
-      font-weight: 500;
-      margin-left: 10px;
+    padding: $space-lg;
+    &.-darker {
+      background-color: $color-grey;
     }
   }
-  &__delivery {
-    text-align: center;
-    padding: 7px 0;
+
+  &__price {
+    margin-left: $space-md;
+    font-weight: bold;
   }
-  &__link {
-    text-align: center;
-    a {
-      color: $color-brand;
-      cursor: pointer;
-      border-bottom: 1px transparent;
-      &:hover,
-      :focus {
-        text-decoration: none;
-        border-bottom: 1px solid $color-brand;
+
+  &__button {
+    cursor: pointer;
+    height: 30px;
+    line-height: 30px;
+    border-radius: 100px;
+    background-color: $color-important;
+    transition: background-color 0.2s ease-in;
+
+    &-text {
+      padding-right: 25px;
+      position: relative;
+      color: $color-white;
+
+      &:after {
+        position: absolute;
+        content: '';
+        background: url('~assets/images/katalog/cart.png') no-repeat;
+        right: 0;
+        top: 50%;
+        transform: translateY(-50%);
+        width: 22px;
+        height: 20px;
       }
     }
-  }
-  &__buttons {
-    text-align: center;
-    margin-top: 5px;
-    .btn__buy,
-    .btn__cart {
-      display: inline-block;
-      text-align: center;
-      padding: 2px 0;
-      transition: 0.2s all ease;
-    }
-    .btn__buy {
-      width: 169px;
-      height: 30px;
-      color: $color-brand-text;
-      border: 1px solid $color-brand-text;
-      border-radius: 30px;
-      margin-right: 3px;
-      padding: 4px 0;
-      &:hover {
-        border: 1px solid $color-brand;
-        color: $color-brand;
-      }
-    }
-    .btn__cart {
-      width: 46px;
-      height: 30px;
-      background-color: $color-brand-text;
-      border: 1px solid $color-brand-text;
-      border-radius: 30px;
-      color: #fff;
-      &:hover {
-        background-color: $color-secondary;
-        border: 1px solid $color-secondary;
-      }
-      span {
-        font-weight: 300;
-      }
-    }
+
+    box-shadow: rgba(0, 0, 0, 0.4) 1px 1px 3px;
   }
 }
