--- a/app/assets/css/components/tovar/product.scss
+++ b/app/assets/css/components/tovar/product.scss
@@ -26,10 +26,13 @@ h1 {
 .product-prop {
   width: 47%;
 }
-.slide {
-  margin-bottom: 10px;
-  img {
+.slider {
+  margin-bottom: $space-md;
+  height: 250px;
+
+  &__item {
     width: 100%;
+    height: 100%;
   }
 }
 .recommend {
