--- a/app/assets/css/components/Header.scss
+++ b/app/assets/css/components/Header.scss
@@ -1,257 +1,219 @@
-header {
+.header {
+  color: $color-text;
   font-size: 14px;
   font-weight: lighter;
-}
-
-.info-nav {
-  background-color: #f1f1f1;
-  margin-bottom: 10px;
-}
-@media screen and (max-width: 768px) {
-  .info-nav {
-    display: none;
+  @media(max-width: 630px) {
+    font-size: 12px;
+    font-weight: 700; 
   }
-  .info {
-    padding-top: 10px;
+  &__container {
+    background-color: $color-grey-light;
+    padding: $space-md;
   }
-  .main-menu {
-    display: none;
-  }
-  .menu-find {
-    float: right;
-  }
-}
-.info-menu {
-  font-size: 14px;
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  height: 30px;
-  line-height: 30px;
-}
-.info-menu-el {
-  text-decoration: none;
-  display: inline;
-  text-align: center;
-}
-a,
-.info-menu-el:hover,
-.info-menu-el:focus {
-  color: #666666;
-  text-decoration: none;
-}
-a {
-  border-bottom: 1px transparent;
-  transition: 0.4s ease all;
-}
-.info-menu-el:hover,
-.info-menu-el:focus {
-  & a {
-    border-bottom: 1px solid #666;
-  }
-}
-
-.info {
-  height: 81px;
-}
-@media screen and (max-width: 991px) {
-  .info {
-    height: auto;
-  }
-}
-
-@media screen and (max-width: 1200px) {
-  .logo {
-    img {
-      width: 100%;
-    }
-  }
-}
-@media screen and (max-width: 768px) {
-  .logo {
-    img {
-      width: auto;
-    }
-  }
-  .logo,
-  .social,
-  .info-open,
-  .info-phone {
+  &__list {
     text-align: center;
   }
-  .social {
-    margin-bottom: 20px;
-    & span {
-      display: none;
+  &__item {
+    display: inline-block;
+    width: 16%;
+    @media(max-width: 991px) {
+      vertical-align: middle; 
     }
-  }
-  .info-mail {
-    & span {
+    @media(max-width: 540px) {
       display: block;
+      margin: 0 auto;
+      font-size: 14px;
+      font-weight: 300;
+      width: 100%
+
+    }
+    & a {
+    color: $color-text
     }
   }
 }
 .social {
-  line-height: 28px;
-  img {
-    margin-right: 10px;
+  padding: $space-md;
+  @media(max-width: 991px) {
+   text-align: center; 
   }
-  .social__mes {
-    span {
-      margin-right: 20px;
+  &__logo,
+  &__block {
+    display: inline-block; 
+  }
+  &__logo {
+    @media(max-width: 1200px) {
+      width: 10%; 
+      vertical-align: top;
+    }
+    @media(max-width: 991px) {
+      width: 20%; 
     }
   }
-  .social__soc {
-    span {
-      margin-right: 10px;
+  &__all {
+    display: inline-block;
+    width: 23%;
+    text-align: left;
+    @media(max-width: 991px) {
+      width: 30%;
+      text-align: center;
+      padding-top: 15px;
+    }
+    @media(max-width: 740px) {
+      width: 40%;
+    }
+    @media(max-width: 520px) {
+      width: 100%; 
     }
   }
-}
-
-.info-open {
-  .info-weekend {
-    font-size: 12px;
-  }
-}
-@media screen and (max-width: 991px) {
-  .info-open {
-    font-size: 12px;
-  }
-}
-
-.info-phone {
-  .info-phone-dop {
-    color: #a9a9a9;
-    font-size: 12px;
-  }
-}
-@media screen and (max-width: 1200px) {
-  .info-phone {
-    font-size: 12px;
-  }
-}
-
-.info-mail {
-  .callback {
-    color: #00bfed;
-    border-bottom: 1px transparent;
-    transition: all 0.4s ease-in-out;
-    &:hover {
-      cursor: pointer;
-      color: darken($color: #00bfed, $amount: 1%);
-      border-bottom: 1px solid #00bfed;
-    }
-  }
-}
-@media screen and (max-width: 991px) {
-  .info-mail {
+  &__block {
+    width: 85%;
     text-align: center;
-    p {
-      display: inline-block;
-      margin-right: 10px;
+    line-height: 20px;
+    font-size: 14px;
+    color: $color-text;
+    @media(max-width: 1200px) {
+      width: 90%; 
+    }
+    @media(max-width: 991px) {
+      width: 100%; 
     }
   }
-}
-
-.main-nav {
-  background-color: #00bfed;
-  color: #a9a9a9;
-  .main-menu {
-    list-style: none;
-    margin-left: 0;
-    padding: 15px 0;
-    float: left;
-    .main-menu-item {
-      padding: 0 20px;
-      position: relative;
-      &:first-child {
-        padding-left: 0;
+  &__mess {
+    vertical-align: top;
+    line-height: 25px
+  }
+  &__phone {
+    & a {
+      color: $color-text;
+      &:hover {
+        text-decoration: none;
       }
-      &:last-child {
-        padding-right: 0;
-      }
-      a {
-        color: #ffffff;
-      }
-
-      display: inline-block;
-      img {
-        margin-left: 5px;
-      }
-      .menu-child {
-        position: absolute;
-        background-color: $color-primary;
-        padding: 0 15px 10px 15px;
-        border-bottom-left-radius: 5px;
-        border-bottom-right-radius: 5px;
-        top: 35px;
-        left: 0;
-        transition: all 0.2s ease;
-      }
+    }  
+  }  
+  &__par {
+    color: $color-grey-dark;
+    font-size: 13px;
+  }  
+  
+  &__icon,
+  & span {
+    display: inline-block;
+  }
+  &__mail {
+    text-align: right;
+    vertical-align: top;
+    @media(max-width: 991px) {
+      text-align: center;
+      width: 50%;
+    }
+    @media(max-width: 520px) {
+      width: 70%;
     }
   }
-}
-.menu-find {
-  display: block;
-  float: right;
-  margin-top: 15px;
-  position: relative;
-  .find {
-    background-color: #fff;
-    border-radius: 30px;
-    border: none;
-    padding: 0 18px;
+  &__e-mail {
+    padding-right: 5px;
   }
-  button.btn-find {
-    border: none;
-    background-color: transparent;
+  &__icon {
+    margin-left: 10px;
+    vertical-align: middle;
+  }
+  &__iconTG {
+    background-image: url("~/assets/images/social/telegram.png");
+    background-repeat: no-repeat;
+    width: 22px;
+    height: 20px;
+    &:hover {
+      background-image: url("~/assets/images/social/telegram-c.png");
+    }
+  }  
+  &__iconVB {
+    background-image: url("~/assets/images/social/viber.png");
+    background-repeat: no-repeat;
+    width: 22px;
+    height: 20px;
+    &:hover {
+      background-image: url("~/assets/images/social/viber-c.png");
+      }  
+    }
+  &__iconWA {
+    background-image: url("~/assets/images/social/whatsapp.png");
+    background-repeat: no-repeat;
+    width: 22px;
+    height: 20px;
+    &:hover {
+      background-image: url("~/assets/images/social/whatsapp-c.png");
+      }  
+    }
+  &__iconVK {
+    background-image: url("~/assets/images/social/vk.png");
+    background-repeat: no-repeat;
+    width: 30px;
+    height: 20px;
+    &:hover {
+      background-image: url("~/assets/images/social/vk-c.png");
+      }  
+    }
+  &__iconIG {
+    background-image: url("~/assets/images/social/instagram.png");
+    background-repeat: no-repeat;
+    width: 22px;
+    height: 20px;
+    &:hover {
+      background-image: url("~/assets/images/social/instagram-c.png");
+      }  
+    }
+  &__callback {
+    color: $color-blue;
+    cursor: pointer;
+  }           
+}
+.nav {
+  &__container {
+    background-color: $color-blue;
+  }
+  &__item {
+    display: inline-block;
+    width: 20%;
+    text-align: center;
+    position: relative;
+    @media(max-width: 740px) {
+      display: block;
+      width: 100%;
+    }
+    &:hover {  
+      background-color: $color-blue-light;
+    }
+    &:hover .nav__child {
+      opacity: 1;
+      left: 0;
+    }
+    & a {
+      color: $color-white;
+      font-size: 16px;
+      text-decoration: none;
+      width: 100%;
+      display: inline-block;
+      padding: 10px 0;
+    }
+  }
+  &__child-item {
+    position: relative;
+    &:hover {  
+      background-color: $color-blue-light;
+    }
+  }
+  &__child {
     position: absolute;
-    left: 0;
-    top: -2px;
-    outline: none;
+    min-width: 100%;
+    left: -99999999em;
+    top: 100%;
+    transition: .5s opacity;
+    opacity: 0;
+    z-index: 1;
+    background-color: $color-blue;
   }
-}
-.menu-button {
-  display: none;
-  color: #fff;
-  float: left;
-  margin-top: 14px;
-  margin-bottom: 14px;
-}
-.text {
-  display: inline-block;
-  vertical-align: middle;
-}
-.button {
-  display: inline-block;
-  vertical-align: middle;
-  position: relative;
-  width: 20px;
-  height: 3px;
-  border-radius: 50%;
-  background-color: #ffffff;
-  margin-right: 10px;
-  &:after {
-    content: '';
-    position: absolute;
-    top: -5px;
-    width: 20px;
-    height: 3px;
-    border-radius: 50%;
-    background-color: #ffffff;
+  &__bottom {
+    padding-left: 5px;
   }
-  &:before {
-    content: '';
-    position: absolute;
-    top: 5px;
-    width: 20px;
-    height: 3px;
-    border-radius: 50%;
-    background-color: #ffffff;
-  }
-}
-@media screen and (max-width: 768px) {
-  .menu-button {
-    display: block;
-  }
-}
+}  
